--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -87,7 +87,7 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="https://leopardpan.cn/">leopardpan</a> |
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} <a href="https://beian.miit.gov.cn">蜀ICP备2020037005号-1</a>  Theme by <a href="https://leopardpan.cn/">leopardpan</a> |
             <iframe
                 style="margin-left: 2px; margin-bottom:-5px;"
                 frameborder="0" scrolling="0" width="91px" height="20px"
